--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,8 @@ spring:
     url: jdbc:postgresql://localhost:5432/service-registry
     username: benefits
     password: ben0147
-
+  application:
+    name: registry-service
   jpa:
     hibernate.ddl-auto: create
     show-sql: true
