--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.2'
 	implementation 'org.flywaydb:flyway-core'
+	implementation 'com.github.javafaker:javafaker:1.0.2'
 	implementation 'org.springframework.kafka:spring-kafka'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
@@ -40,7 +40,6 @@ dependencies {
 	annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.4.2.Final'
 	implementation group: 'io.swagger.core.v3', name: 'swagger-core', version: '2.2.0'
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.8'
-	implementation group: 'io.opentracing.contrib', name: 'opentracing-spring-jaeger-web-starter', version: '3.3.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
