--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'org.springframework.boot' version "$springBootVersion"
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'io.spring.dependency-management' version "$springDependencyManagementVersion"
 	id 'java'
 }
 
