add auth service

--- a/registration-service/src/main/resources/application.properties
+++ b/registration-service/src/main/resources/application.properties
@@ -1,1 +1,35 @@
+spring.application.name=registration-service
+
+server.port=0
+
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8484/auth/realms/Meetingroom-New
+
+keycloak.uri.tokens.obtain=http://localhost:8484/auth/realms/Meetingroom-New/protocol/openid-connect/token
+keycloak.uri.users.add=http://localhost:8484/auth/admin/realms/Meetingroom-New/users
+keycloak.uri.roles.add.to.user=http://localhost:8484/auth/admin/realms/Meetingroom-New/users/
+keycloak.uri.roles.add.to.client=/role-mappings/clients/
+keycloak.uri.jwks=http://localhost:8484/auth/realms/Meetingroom-New/protocol/openid-connect/certs
+
+keycloak.client.id.gateway=81549b78-6b93-4c2f-bcda-a19bcfa0e64b
+keycloak.client.name.gateway=api-gateway
+keycloak.client.id.gateway-user-management=2af87e37-aa27-4f95-b8f6-a3d5d5ece120
+keycloak.client.name.gateway-user-management=gateway-user-management
+
+keycloak.role.id.unauthorized=2dace05d-2191-409a-a5d3-3002a0aa6cfb
+keycloak.role.name.unauthorized=UNAUTHORIZED
+keycloak.role.id.user=860a1f9c-4bbe-4d7a-9255-5319bb3ff75b
+keycloak.role.name.user=USER
+keycloak.role.id.admin=5af24b65-8732-44c1-aa17-bde444c08653
+keycloak.role.name.admin=ADMIN
+
+keycloak.admin.username=user-management-admin
+keycloak.admin.password=admin
+keycloak.admin.grant.type=password
+keycloak.admin.client.id=gateway-user-management
 
