--- a/api-gateway/gateway/src/main/resources/application.properties
+++ b/api-gateway/gateway/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.cloud.loadbalancer.ribbon.enabled=false
 
 spring.cloud.gateway.routes[0].id=registration-service
 spring.cloud.gateway.routes[0].uri=lb://registration-service
-spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/auth
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/**
 
 eureka.instance.instance-id=${spring.application.name}-${random.uuid}
 
