--- a/registration-service/build.gradle
+++ b/registration-service/build.gradle
@@ -52,6 +52,13 @@ dependencies {
 	testImplementation 'org.testcontainers:postgresql'
 	testImplementation 'org.testcontainers:testcontainers'
 
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation group: 'io.swagger.core.v3', name: 'swagger-core', version: '2.2.0'
+	implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.4.2.Final'
+	implementation 'org.springframework.security:spring-security-oauth2-resource-server'
+	implementation 'org.springframework.security:spring-security-oauth2-jose'
+
 }
 
 dependencyManagement {
