--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ before_script:
 
 build:
   tags:
-    - "backend-docker"
+    - "docker"
   stage: build
   image: gradle:jdk17-alpine
   script: gradle --build-cache build
@@ -30,9 +30,10 @@ build:
   rules:
     - if: ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH || $CI_COMMIT_BRANCH == "develop")
 
+
 test:
   tags:
-    - "backend-docker"
+    - "docker"
   stage: test
   image: gradle:jdk17-alpine
   script: gradle check
