--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,9 @@ build:
   artifacts:
     when: always
     reports:
-      junit: '**/build/test-results/test/**/TEST-*.xml'
+      junit: 
+      - '**/**/build/test-results/test/**/TEST-*.xml'
+      - '**/build/test-results/test/**/TEST-*.xml'
   rules:
     - if: ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH || $CI_COMMIT_BRANCH == "develop")
 
@@ -42,7 +44,9 @@ test:
   artifacts:
     when: always
     reports:
-      junit: '**/build/test-results/test/**/TEST-*.xml'
+      junit: 
+      - '**/**/build/test-results/test/**/TEST-*.xml'
+      - '**/build/test-results/test/**/TEST-*.xml'
   cache:
     key: "$CI_COMMIT_REF_NAME"
     policy: pull
