--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,9 +7,9 @@
 variables:
   GRADLE_OPTS: "-Dorg.gradle.daemon=false"
 
-before_script:
-  - GRADLE_USER_HOME="$(pwd)/.gradle"
-  - export GRADLE_USER_HOME
+# before_script:
+#   - GRADLE_USER_HOME="$(pwd)/.gradle"
+#   - export GRADLE_USER_HOME
 
 build:
   tags:
