--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,8 +28,8 @@ build:
     when: always
     reports:
       junit: 
-      - "./**/**/build/test-results/test/**/TEST-*.xml"
-      - "./**/build/test-results/test/**/TEST-*.xml"
+      - "./**/**/build/test-results/test/TEST-*.xml"
+      - "./**/build/test-results/test/TEST-*.xml"
   rules:
     - if: ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH || $CI_COMMIT_BRANCH == "develop")
 
@@ -45,8 +45,8 @@ test:
     when: always
     reports:
       junit: 
-      - "./**/**/build/test-results/test/**/TEST-*.xml"
-      - "./**/build/test-results/test/**/TEST-*.xml"
+      - "./**/**/build/test-results/test/TEST-*.xml"
+      - "./**/build/test-results/test/TEST-*.xml"
   cache:
     key: "$CI_COMMIT_REF_NAME"
     policy: pull
