--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,11 @@ build:
   before_script:
   - GRADLE_USER_HOME="$(pwd)/.gradle"
   - export GRADLE_USER_HOME
-  script: gradle --build-cache build
+  script:
+    - ls -l ./
+    - pwd 
+    - gradle --build-cache build
+    - ls -l ./
   cache:
     key: "$CI_COMMIT_REF_NAME"
     policy: push
