--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,8 +19,7 @@ build:
   - export GRADLE_USER_HOME
   script:
     - gradle --build-cache --no-daemon assemble
-    - ls -l ./
-    - find ./ -type f -name 'TEST-*.xml'
+    - find ./ -type f -name '*.xml' -exec ls -l {} \;
   cache:
     key: "$CI_COMMIT_REF_NAME"
     policy: push
