--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,12 +35,12 @@ build gateway:
     entrypoint: [""]
   script:
     - mkdir -p /kaniko/.docker
-    - echo "{\"auths\":{\"https://${REGISTRY_URL}\":{\"auth\":\"$(printf "%s:%s" "${REGISTRY_USER_RW}" "${REGISTRY_RW_PASS}" | base64 | tr -d '\n')\"}}}" > /kaniko/.docker/config.json
+    - echo "{\"auths\":{\"${REGISTRY_URL}\":{\"auth\":\"$(printf "%s:%s" "${REGISTRY_USER_RW}" "${REGISTRY_RW_PASS}" | base64 | tr -d '\n')\"}}}" > /kaniko/.docker/config.json
     - >-
       /kaniko/executor
       --context "${CI_PROJECT_DIR}/ci-cd/"
       --dockerfile "${CI_PROJECT_DIR}/ci-cd/api-gateway.Dockerfile"
-      --destination "{REGISTRY_URL}/meetingroom-new-apigateway:dev"
+      --destination "{REGISTRY_NAME}/meetingroom-new-apigateway:dev"
   needs: ["build jars"]
   rules:
     - if: ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH || $CI_COMMIT_BRANCH == "develop")
