--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ build jars:
     paths:
       - api-gateway/**/build/libs/*.jar
       - '**/build/libs/*.jar'
-    expire_in: 1 week
+    expire_in: 1 day
   rules:
     - if: ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH || $CI_COMMIT_BRANCH == "develop")
 
@@ -51,7 +51,7 @@ test:
   tags:
     - docker-meetingroom
   stage: test
-  image: gradle:jdk17-alpine
+  image: gradle:jdk17
   before_script:
   - GRADLE_USER_HOME="$(pwd)/.gradle"
   - export GRADLE_USER_HOME
