--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -30,7 +30,18 @@ dependencies {
 	annotationProcessor "org.mapstruct:mapstruct-processor:$mapStructVersion"
 	runtimeOnly 'org.postgresql:postgresql'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	implementation "com.github.javafaker:javafaker:$javafakerVersion"
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.testcontainers:junit-jupiter'
+	testImplementation 'org.testcontainers:kafka'
+	testImplementation 'org.testcontainers:postgresql'
+	testImplementation 'org.testcontainers:testcontainers'
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.testcontainers:testcontainers-bom:$testcontainersVersion"
+	}
 }
 
 tasks.named('test') {
