setted properties for keycloak

--- a/api-gateway/gateway/src/main/resources/application.properties
+++ b/api-gateway/gateway/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/**
 
 eureka.instance.instance-id=${spring.application.name}-${random.uuid}
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8484/auth/realms/Meetingroom-New
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://10.10.14.31:30001/auth/realms/Meetingroom-New
