--- a/registration-service/src/main/resources/application.properties
+++ b/registration-service/src/main/resources/application.properties
@@ -8,24 +8,24 @@ eureka.client.fetch-registry=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8484/auth/realms/Meetingroom-New
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://10.10.14.31:30001/auth/realms/Meetingroom-New
 
-keycloak.uri.tokens.obtain=http://localhost:8484/auth/realms/Meetingroom-New/protocol/openid-connect/token
-keycloak.uri.users.add=http://localhost:8484/auth/admin/realms/Meetingroom-New/users
-keycloak.uri.roles.add.to.user=http://localhost:8484/auth/admin/realms/Meetingroom-New/users/
+keycloak.uri.tokens.obtain=http://10.10.14.31:30001/auth/realms/Meetingroom-New/protocol/openid-connect/token
+keycloak.uri.users.add=http://10.10.14.31:30001/auth/admin/realms/Meetingroom-New/users
+keycloak.uri.roles.add.to.user=http://10.10.14.31:30001/auth/admin/realms/Meetingroom-New/users/
 keycloak.uri.roles.add.to.client=/role-mappings/clients/
-keycloak.uri.jwks=http://localhost:8484/auth/realms/Meetingroom-New/protocol/openid-connect/certs
+keycloak.uri.jwks=http://10.10.14.31:30001/auth/realms/Meetingroom-New/protocol/openid-connect/certs
 
-keycloak.client.id.gateway=81549b78-6b93-4c2f-bcda-a19bcfa0e64b
+keycloak.client.id.gateway=28848ed9-d935-4f4c-97d2-01d2ab9d477c
 keycloak.client.name.gateway=api-gateway
-keycloak.client.id.gateway-user-management=2af87e37-aa27-4f95-b8f6-a3d5d5ece120
+keycloak.client.id.gateway-user-management=67166f4a-7ade-44fe-8d23-57a8c6acc6e7
 keycloak.client.name.gateway-user-management=gateway-user-management
 
-keycloak.role.id.unauthorized=2dace05d-2191-409a-a5d3-3002a0aa6cfb
+keycloak.role.id.unauthorized=2c2bb0cd-a1b2-4fcf-8ce7-17220c2bef37
 keycloak.role.name.unauthorized=UNAUTHORIZED
-keycloak.role.id.user=860a1f9c-4bbe-4d7a-9255-5319bb3ff75b
+keycloak.role.id.user=cb018865-0e2d-4d93-bbd0-f1d04c76301d
 keycloak.role.name.user=USER
-keycloak.role.id.admin=5af24b65-8732-44c1-aa17-bde444c08653
+keycloak.role.id.admin=5fca58c4-742a-4bce-8051-3bd0bb2c1a9c
 keycloak.role.name.admin=ADMIN
 
 keycloak.admin.username=user-management-admin
