created end-points, service, repository and flyway

--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -43,3 +43,8 @@ dependencyManagement {
 		mavenBom "org.testcontainers:testcontainers-bom:$testcontainersVersion"
 	}
 }
+
+tasks.named('test') {
+	useJUnitPlatform()
+}
+
