changed registration-service server port

--- a/registration-service/src/main/resources/application.properties
+++ b/registration-service/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=registration-service
 
+server.port=0
+
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
