set eureka instance host

--- a/api-gateway/gateway/src/main/resources/application.properties
+++ b/api-gateway/gateway/src/main/resources/application.properties
@@ -8,5 +8,6 @@ spring.cloud.gateway.routes[0].uri=lb://registration-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/**
 
 eureka.instance.instance-id=${spring.application.name}-${random.uuid}
+eureka.instance.hostname=localhost
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://10.10.14.31:30001/auth/realms/Meetingroom-New
