--- a/registration-service/src/main/resources/application.properties
+++ b/registration-service/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=registration-service
 
-server.port=0
+server.port=8181
 
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.serviceUrl.defaultZone=http://10.10.14.31:30100/eureka/
