--- a/registration-service/src/main/resources/application.properties
+++ b/registration-service/src/main/resources/application.properties
@@ -3,10 +3,9 @@ spring.application.name=registration-service
 server.port=8181
 
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
-eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.serviceUrl.defaultZone=http://10.10.14.31:30100/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://10.10.14.31:30001/auth/realms/Meetingroom-New
 
