--- a/api-gateway/gateway/build.gradle
+++ b/api-gateway/gateway/build.gradle
@@ -24,6 +24,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	implementation group: 'io.swagger.core.v3', name: 'swagger-core', version: '2.2.0'
+	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.8'
 }
 
 dependencyManagement {
