--- a/api-gateway/gateway/src/main/resources/application.properties
+++ b/api-gateway/gateway/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=api-gateway
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 spring.cloud.loadbalancer.ribbon.enabled=false
+spring.cloud.discovery.enabled=true
 
 spring.cloud.gateway.routes[0].id=registration-service
 spring.cloud.gateway.routes[0].uri=lb://registration-service
