add email notification

--- a/registration-service/src/main/resources/application.properties
+++ b/registration-service/src/main/resources/application.properties
@@ -33,3 +33,10 @@ keycloak.admin.password=admin
 keycloak.admin.grant.type=password
 keycloak.admin.client.id=gateway-user-management
 
+notification.mail.host=smtp.gmail.com
+notification.mail.port=587
+notification.mail.sender.username=sergei.yurevich@gmail.com
+notification.mail.sender.password=ozfbcmmrgpxwlbdm
+notification.mail.code.length=4
+notification.mail.code.valid.millis=60000
+
