add password reset endpoint

--- a/registration-service/src/main/resources/application.properties
+++ b/registration-service/src/main/resources/application.properties
@@ -11,10 +11,12 @@ eureka.client.serviceUrl.defaultZone=http://10.10.14.31:30100/eureka/
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://10.10.14.31:30001/auth/realms/Meetingroom-New
 
 keycloak.uri.tokens.obtain=http://10.10.14.31:30001/auth/realms/Meetingroom-New/protocol/openid-connect/token
+keycloak.uri.users=http://10.10.14.31:30001/auth/admin/realms/Meetingroom-New/users/
 keycloak.uri.users.add=http://10.10.14.31:30001/auth/admin/realms/Meetingroom-New/users
 keycloak.uri.roles.add.to.user=http://10.10.14.31:30001/auth/admin/realms/Meetingroom-New/users/
 keycloak.uri.roles.add.to.client=/role-mappings/clients/
 keycloak.uri.jwks=http://10.10.14.31:30001/auth/realms/Meetingroom-New/protocol/openid-connect/certs
+keycloak.uri.password.reset=/reset-password
 
 keycloak.client.id.gateway=28848ed9-d935-4f4c-97d2-01d2ab9d477c
 keycloak.client.name.gateway=api-gateway
