created push notification endpoint

--- a/registration-service/src/main/resources/application.properties
+++ b/registration-service/src/main/resources/application.properties
@@ -33,3 +33,4 @@ keycloak.admin.password=admin
 keycloak.admin.grant.type=password
 keycloak.admin.client.id=gateway-user-management
 
+app.firebase-configuration-file=meetingroom-notification-firebase-adminsdk-dyfbb-b4f0e42672.json
