--- a/registration-service/build.gradle
+++ b/registration-service/build.gradle
@@ -59,6 +59,7 @@ dependencies {
 	implementation 'org.springframework.security:spring-security-oauth2-resource-server'
 	implementation 'org.springframework.security:spring-security-oauth2-jose'
 
+	implementation 'com.google.firebase:firebase-admin:6.11.0'
 }
 
 dependencyManagement {
