add notification service module

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,4 +8,5 @@ findProject(':api-gateway:discovery-service')?.name = 'discovery-service'
 include 'payment-service'
 include 'deposit-service'
 include 'transfer-service'
+include 'notification-service'
 
