reorganize entities and add crypt

--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -44,7 +44,7 @@ dependencyManagement {
 	}
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
-}
+//tasks.named('test') {
+//	useJUnitPlatform()
+//}
 
