--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -4,15 +4,15 @@ server:
 spring:
   datasource:
     driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/antondzyubak?currentSchema=payment_service
-    username: antondzubak
-    password: 123456
+    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=payment_service
+    username: postgres
+    password: postgres
 
 
   flyway:
     schemas: payment_service
-    user: antondzubak
-    password: 123456
+    user: postgres
+    password: postgres
 
 logging:
   level:
