--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -4,15 +4,15 @@ server:
 spring:
   datasource:
     driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=payment_service
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://10.10.14.31:30000:5432/database-psql?currentSchema=payment_service
+    username: psqluser
+    password: PoSPa$$woRd
 
 
   flyway:
     schemas: payment_service
-    user: postgres
-    password: postgres
+    user: psqluser
+    password: PoSPa$$woRd
 
 logging:
   level:
