--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation "org.springdoc:springdoc-openapi-ui:$springdocVersion"
+	implementation 'org.springframework.kafka:spring-kafka'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	implementation 'org.flywaydb:flyway-core'
@@ -47,4 +48,3 @@ dependencyManagement {
 tasks.named('test') {
 	useJUnitPlatform()
 }
-
