--- a/transfer-service/build.gradle
+++ b/transfer-service/build.gradle
@@ -1,22 +1,47 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.0'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-	id 'java'
+    id 'org.springframework.boot' version "$springBootVersion"
+    id 'io.spring.dependency-management' version "$springDependencyManagementVersion"
+    id 'java'
 }
 
 group = 'com.andersen.banking'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation "org.springdoc:springdoc-openapi-ui:$springdocVersion"
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
+//	implementation 'org.flywaydb:flyway-core'
+    implementation "org.mapstruct:mapstruct:$mapStructVersion"
+    annotationProcessor "org.mapstruct:mapstruct-processor:$mapStructVersion"
+//	runtimeOnly 'org.postgresql:postgresql'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+//	implementation "com.github.javafaker:javafaker:$javafakerVersion"
+//	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//	testImplementation 'org.testcontainers:junit-jupiter'
+//	testImplementation 'org.testcontainers:kafka'
+//	testImplementation 'org.testcontainers:postgresql'
+//	testImplementation 'org.testcontainers:testcontainers'
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
+dependencyManagement {
+    imports {
+        mavenBom "org.testcontainers:testcontainers-bom:$testcontainersVersion"
+    }
 }
+
