add email notification block and check endpoints

--- a/registration-service/src/main/resources/application.properties
+++ b/registration-service/src/main/resources/application.properties
@@ -42,4 +42,5 @@ notification.mail.sender.username=sergei.yurevich@gmail.com
 notification.mail.sender.password=ozfbcmmrgpxwlbdm
 notification.mail.code.length=4
 notification.mail.code.valid.millis=60000
+notification.mail.blocking.time.millis=2700000
 
